--- a/src/SmartwayTest.DataAccess/Scripts/Sql.resx
+++ b/src/SmartwayTest.DataAccess/Scripts/Sql.resx
@@ -124,6 +124,9 @@
   <data name="DeleteEmployee" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Employee\DeleteEmployee.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;windows-1251</value>
   </data>
+  <data name="GetEmployeeById" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Employee\GetEmployeeById.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;windows-1251</value>
+  </data>
   <data name="GetEmployeesByCompanyId" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Employee\GetEmployeesByCompanyId.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;windows-1251</value>
   </data>
